@@ -135,7 +135,8 @@ Documents}'')
 \texttt{XCSoarData} is located on the SD card (e.g.
 ``\texttt{/sdcard/XCSoarData}'').
 \item[Altair]
-\texttt{XCSoarData} is located in the internal storage.
+If XCSoarData exists on an USB drive, that one is used, otherwise the
+internal storage is used.
 \end{description}
 
 For embedded devices it is recommended to create \texttt{XCSoarData} on a SD
