@@ -18,6 +18,7 @@ Version 6.1.1 - not yet released
 * Altair
   - fix UI lag
   - fix default task on startup
+  - optionally load XCSoarData from USB drive
 
 Version 6.1 - 2011/05/19
 * devices
